Внесла правки согласно комментам наставника

--- a/source/sass/common/button.scss
+++ b/source/sass/common/button.scss
@@ -1,23 +1,26 @@
 .button {
   display: block;
   min-height: 40px;
+  min-width: 248px;
+  box-sizing: border-box;
   text-align: center;
   padding: 10px 20px;
   color: #ffffff;
   line-height: 20px;
-  background-color: $green;
-  min-width: 260px;
-  box-sizing: border-box;
   font-weight: 400;
+  font-size: 16px;
+  background-color: $green;
+  border: none;
 
   &:hover {
     background-color: #5eaa2f;
-    color: yellow;
+    color: #ffff00;
   }
 
   &:active {
     color: rgba(255, 255, 255, 0.3);
   }
+
   &--grey {
     color: #000000;
     background-color: $grey;
