--- a/source/sass/common/contacts.scss
+++ b/source/sass/common/contacts.scss
@@ -1,9 +1,47 @@
+.contacts {
+  @media (min-width:$desktop-width) {
+    position: relative;
+    display: flex;
+    align-items: center;
+    height: 500px;
+  }
+}
+
+.contacts__text {
+  @media (min-width:$desktop-width) {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+  }
+}
+
 .contacts__text-wrapper {
+  display: flex;
   line-height: 20px;
   z-index: 1;
+  align-items: center;
 
   &--white {
-    background-color: #ffffff;
+    background-color: $white;
+  }
+
+  @media (min-width:$tablet-width) {
+    justify-content: space-between;
+
+    &--white {
+      background-color: $white;
+    }
+  }
+
+  @media (min-width:$desktop-width) {
+    margin-bottom: 10px;
+    z-index: 1;
+    background-color: $white;
+    max-width: 570px;
   }
 }
 
@@ -12,25 +50,62 @@
   line-height: 20px;
   font-weight: 300;
   text-transform: uppercase;
-  color: #222222;
+  color: $black;
+  margin: 0;
+
+  @media (min-width:$tablet-width) {
+    line-height: 1.25;
+    font-size: 20px;
+  }
+
+  @media (min-width:$desktop-width) {
+    margin-right: 90px;
+  }
 }
 
 .contacts__address {
   font-family: "Arial", sans-serif;
   font-size: 14px;
   line-height: 1.5;
+
+  @media (min-width: $tablet-width) {
+    text-align: right;
+    font-size: 16px;
+  }
+
+  @media (min-width: $desktop-width) {
+    text-align: left;
+    line-height: 1.4;
+  }
 }
 
 .contacts__city {
   white-space: nowrap;
+
+  @media (min-width: $tablet-width) {
+    display: block;
+    margin-top: 16px;
+  }
 }
 
 .contacts__map {
   width: 100%;
   height: 362px;
-  background-color: #fdf7ef;
-  background-image: url("../img/map.png");
+  background-color: $light-grey;
+  background-image: url("../img/map-mobile.png");
   background-repeat: no-repeat, no-repeat;
   background-position: center 51%, center;
   background-size: 62px, cover;
+
+  @media (min-width:$tablet-width) {
+    height: 395px;
+    background-image: url("../img/map-tablet.png");
+    background-size: 124px, cover;
+  }
+
+  @media (min-width:$tablet-width) {
+    height: 500px;
+    background-image: url("../img/map-desktop.png");
+    background-position: center;
+  }
 }
