--- a/source/sass/common/main-nav.scss
+++ b/source/sass/common/main-nav.scss
@@ -1,14 +1,35 @@
+.main-nav {
+  border-top: 1px solid $light-grey;
+
+  @media (min-width:$tablet-width) {
+   border-top: none;
+  }
+}
 .main-nav__list {
   @include reset-list ();
+
+  @media (min-width:$tablet-width) {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  @media (min-width:$desktop-width) {
+    flex-basis: 570px;
+    justify-content: flex-end;
+  }
 }
 
 .main-nav__item {
-  border-bottom: 1px solid #e6e6e6;
+  border-bottom: 1px solid $light-grey;
+
+  @media (min-width:$tablet-width) {
+    border-bottom: none;
+   }
 }
 
 .main-nav__link {
   display: block;
   text-align: center;
+  padding: 20px;
   font-family: $oswald;
   font-weight: 500;
   font-size: 20px;
@@ -20,5 +41,25 @@
 
   &:active {
     opacity: 0.3;
+  }
+  @media (min-width:$tablet-width) {
+    font-size: 18px;
+    line-height: 1.38;
+  }
+  &--current {
+    border-bottom: 2px solid $green;
+  }
+  @media (min-width:$desktop-width) {
+    font-size: 20px;
+    line-height: 1.24;
+  }
+  @media (min-width:$desktop-width) {
+    .main-nav__list--index .main-nav__link {
+      color: $white;
+
+      &--current {
+        border-bottom-color: $white;
+      }
+    }
   }
 }
