--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,7 +2,7 @@
 @import "global/fonts";
 
 // Основные переменные
-@import "global/vars";
+@import "global/variables";
 
 //Примеси (миксины)
 @import "global/mixins";
