--- a/source/sass/common/copyright.scss
+++ b/source/sass/common/copyright.scss
@@ -3,6 +3,9 @@
 }
 
 .copyright__link {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   font-family: "Arial", sans-serif;
   text-decoration: none;
   color: $darkgrey;
@@ -20,5 +23,4 @@
 .copyright__logo {
   width: 27px;
   height: 34px;
-  color: #666666;
 }
