--- a/source/sass/common/page-footer.scss
+++ b/source/sass/common/page-footer.scss
@@ -2,8 +2,36 @@
   background-color: $grey;
 }
 
+.page-footer__bottom {
+  @media (min-width:$tablet-width) {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 49px;
+    padding-bottom: 47px;
+    min-height: 150px;
+  }
+
+  @media (min-width:$desktop-width) {
+    padding-top: 54px;
+    min-height: 144px;
+  }
+}
+
+.page-footer__logo,
+.page-footer__social,
+.page-footer__copyright {
+  padding: 20px 0;
+
+  @media (min-width:$tablet-width) {
+    padding: 0;
+  }
+}
+
 .page-footer__logo {
   position: relative;
+  display: flex;
+  align-items: center;
   height: 45px;
   box-sizing: content-box;
 
@@ -14,8 +42,20 @@
   &:active {
     opacity: 0.6;
   }
+
+  @media (min-width:$tablet-width) {
+    padding: 0;
+  }
 }
 
 .page-footer__logo-link {
-  margin: 0 auto;
+  margin: auto;
+
+  @media (min-width:$tablet-width) {
+    width: 128px;
+  }
+
+  @media (min-width:$desktop-width) {
+    height: 22px;
+  }
 }
