--- a/source/sass/common/page-header.scss
+++ b/source/sass/common/page-header.scss
@@ -8,21 +8,57 @@
       position: absolute;
       content: "";
       top: 0;
+      bottom: 0;
       right: 0;
       left: 0;
-      margin: 0 auto;
-      background-color: #63a73a;
-      background-image: url("../img/index-can-mobile1.jpg");
+      background-color: $green;
+      background-image: url("../img/index-background-mobile1.jpg");
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center;
       z-index: -1;
     }
   }
+
+  @media (min-width:$desktop-width) {
+
+      &::before {
+        position: absolute;
+        content: "";
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: calc(50% + 40px);
+        background-color: $green;
+        background-image: url("../img/index-background-desktop1.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: right center;
+        z-index: -1;
+      }
+    }
+}
+
+.page-header__wrapper {
+  @media (min-width:$tablet-width) {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  @media (min-width:$desktop-width) {
+    padding-top: 52px;
+  }
 }
 
 .page-header__logo {
   position: relative;
+  display: flex;
+  align-items: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
   height: 45px;
   box-sizing: content-box;
 
@@ -32,5 +68,33 @@
 
   &:active {
     opacity: 0.6;
+  }
+}
+
+.page-header__logo-img {
+  width: 33px;
+  height: 38px;
+
+  @media (min-width: $tablet-width) {
+    width: 174px;
+    height: 52px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 202px;
+    height: 59px;
+  }
+}
+
+.page-header__logo-title {
+  margin: auto;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+
+  @media (min-width: $tablet-width) and (min-width: $desktop-width) {
+    display: none;
   }
 }
