--- a/source/sass/common/toggle.scss
+++ b/source/sass/common/toggle.scss
@@ -1,11 +1,14 @@
 .toggle {
   position: absolute;
   top: 4px;
-  right: 0; // -4px;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   box-sizing: content-box;
   width: 30px;
   height: 30px;
-  background: 0;
+  background: 0 0;
   border: 0;
   margin: 0;
   border-radius: 0;
@@ -13,6 +16,10 @@
   line-height: 0;
   outline: none;
   cursor: pointer;
+
+  @media (min-width:$tablet-width) {
+    display: none;
+  }
 }
 
 .toggle__button {
@@ -21,7 +28,7 @@
   width: 26px;
   height: 2px;
   vertical-align: bottom;
-  background: #000000;
+  background: $black;
 }
 
 .toggle__button::after,
@@ -31,14 +38,6 @@
   left: 0;
   width: 100%;
   height: 2px;
-  background: #000000;
+  background: $black;
   transform-origin: 50% 50%;
-}
-
-.toggle__button::after {
-  top: -8px;
-}
-
-.toggle__button::before {
-  top: 8px;
 }
