--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -9,7 +9,8 @@ body {
   min-width: 320px;
   margin: 0;
   padding: 0;
-  background-color: #ffffff;
+  background-color: $white;
+  user-select: none;
 }
 
 *,
@@ -38,14 +39,24 @@ li {
   @include reset-list();
 }
 
-.wrapper {
+.container {
   margin: 0 auto;
-  padding: 0;
+  padding: 0 20px;
   min-width: 320px;
   box-sizing: border-box;
+
+   @media (min-width:$tablet-width) {
+    padding: 0 30px;
+  }
+
+   @media (min-width:$desktop-width) {
+    padding: 0 40px;
+  }
 }
 
-.visually-hidden {
+.visually-hidden,
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -63,4 +74,10 @@ h4,
 h5 {
   margin: 0;
   font-weight: 400;
+}
+
+textarea,
+input,
+button {
+  font-size: 100%;
 }
