--- a/source/sass/index/programs.scss
+++ b/source/sass/index/programs.scss
@@ -1,5 +1,15 @@
-.programs__list {
-  @include reset-list;
+.program {
+  @media (min-width:$tablet-width) {
+    padding-top: 40px;
+  }
+}
+
+.programs__wrapper {
+  @media (min-width:$tablet-width) {
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 .programs__item {
@@ -8,17 +18,32 @@
   background-color: $grey;
   overflow: hidden;
 
-  &:last-child {
-    margin-bottom: 9px;
+  @media (min-width:$tablet-width) {
+    position: relative;
+    margin-bottom: 30px;
+    padding: 55px 285px 40px 50px;
+
+    &--pro {
+      padding-right: 315px;
+    }
   }
 }
 
 .program__title {
+  display: flex;
+  align-items: center;
   margin: 0;
+  padding: 0;
   font-size: 24px;
   line-height: 50px;
   font-weight: normal;
   text-transform: uppercase;
+
+  @media (min-width:$tablet-width) {
+    padding: 20px 0;
+    font-size: 36px;
+    line-height: 1;
+  }
 }
 
 .program__text {
@@ -27,10 +52,25 @@
   line-height: 18px;
   margin: 0;
   padding: 20px 0;
-  border-bottom: 1px solid #d9d9d9;
+  border-bottom: 1px solid $border-grey;
+
+  @media (min-width:$tablet-width) {
+    font-size: 16px;
+    line-height: 1.5;
+    padding-top: 5px;
+    padding-bottom: 35px;
+    border-bottom: 0;
+  }
+
+  @media (min-width:$desktop-width) {
+    padding-top: 18px;
+    padding-bottom: 18px;
+  }
 }
 
 .program__link {
+  display: flex;
+  align-items: center;
   padding: 20px 0;
   text-decoration: none;
   color: $black;
@@ -72,7 +112,6 @@
 
   &:active {
     opacity: 0.3;
-    transition: none;
   }
 
   &:active::before {
@@ -81,5 +120,20 @@
 
   &:active::after {
     border-left-color: $green;
+  }
+
+  @media (min-width:$tablet-width) {
+    display: inline-flex;
+    font-size: 20px;
+    border: 0;
+
+    &::before {
+      margin-left: 25px;
+    }
+  }
+
+  @media (min-width:$desktop-width) {
+    padding: 11px 0;
+    margin-bottom: 27px;
   }
 }
