--- a/source/sass/index/progress.scss
+++ b/source/sass/index/progress.scss
@@ -1,10 +1,25 @@
 .progress {
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
   margin: 0;
+  flex-grow: 1;
   position: relative;
+
+    @media (min-width:$tablet-width) {
+      margin-left: 42px;
+    }
+
+    @media (min-width:$desktop-width) {
+      flex-grow: 0;
+    }
+  }
 }
 
 .progress__title {
+  padding: 0 16px;
   position: relative;
+  bottom: 9px;
   font-family: $arial;
   font-size: 12px;
   line-height: 1;
@@ -12,11 +27,19 @@
   text-transform: lowercase;
   color: $darkgrey;
   background-color: $grey;
+
+  @media (min-width:$tablet-width) {
+    font-size: 14px;
+    background-color: $white;
+  }
+
+  @media (min-width:$desktop-width) {
+    background-color: $grey;
+  }
 }
 
 .progress__value {
   margin: 0;
-  padding: 15px 20px;
   min-width: 121px;
   font-size: 24px;
   text-align: center;
@@ -24,4 +47,11 @@
   text-transform: uppercase;
   border: 1px solid $border-grey;
   border-radius: 3px;
+
+  @media (min-width:$tablet-width) {
+    padding-bottom: 20px;
+    min-width: 162px;
+    font-size: 30px;
+    line-height: 1.23;
+  }
 }
