--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -7,9 +7,9 @@ $light-grey: #EBEBEB;
 $border-grey: #CDCDCD;
 $green: #68b738;
 $dark-green: #5EAA2F;
+$red: #ff8282;
 
 // Viewports
-
 $tablet-width: 768px;
 $desktop-width: 1300px;
 $mobile-width-only: 767px;
