Правки по сетке главной

--- a/source/sass/blocks/add-more-goods.scss
+++ b/source/sass/blocks/add-more-goods.scss
@@ -44,7 +44,7 @@
   font-family: "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
-  color: $darkgrey;
+  color: $special-dark-grey;
 }
 
 .additional-product__price {
