--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -6,7 +6,7 @@
   color: $white;
   line-height: 20px;
   background-color: $green;
-  min-width: 260px;
+  width: 100%;
   box-sizing: border-box;
   font-weight: 400;
 
