--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -31,7 +31,7 @@
 .product__info {
   width: 100%;
   font-family: $arial;
-  color: $darkgrey;
+  color: $special-dark-grey;
 
   & td {
     font-size: 12px;
