--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,13 +1,13 @@
 // Main Colors
 $black: #000000;
 $white: #ffffff;
-$darkgrey: #C4C4C4;
-$grey: #EAEAEA;
-$light-grey: #EBEBEB;
-$border-grey: #CDCDCD;
+$basic-grey: #f2f2f2f2;
+$special-dark-grey: #444444;
+$grey: #eaeaea;
+$light-grey: #ebebebeb;
+$border-grey: #d9d9d9d9;
 $green: #68b738;
 $dark-green: #5EAA2F;
-$red: #ff8282;
 
 // Viewports
 
