--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,29 +11,29 @@
 @import "global/global";
 
 // Общие блоки
-@import "common/page-header";
-@import "common/page-footer";
-@import "common/main-nav";
-@import "common/toggle";
-@import "common/button";
-@import "common/contacts";
-@import "common/copyright";
-@import "common/social";
+@import "blocks/page-header";
+@import "blocks/page-footer";
+@import "blocks/main-nav";
+@import "blocks/toggle";
+@import "blocks/button";
+@import "blocks/contacts";
+@import "blocks/copyright";
+@import "blocks/social";
 
 // Главная страница
-@import "index/progress";
-@import "index/example";
-@import "index/features";
-@import "index/programs";
-@import "index/intro";
-@import "index/slider";
+@import "blocks/progress";
+@import "blocks/example";
+@import "blocks/features";
+@import "blocks/programs";
+@import "blocks/intro";
+@import "blocks/slider";
 
 // Страница каталога
-@import "catalog/catalog";
-@import "catalog/add-more-goods";
-@import "catalog/product";
-@import "catalog/promo";
+@import "blocks/catalog";
+@import "blocks/add-more-goods";
+@import "blocks/product";
+@import "blocks/promo";
 
 // Страница заказа (Страница формы)
-@import "form/program-form";
-@import "form/form-section";
+@import "blocks/program-form";
+@import "blocks/form-section";
