--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -7,7 +7,7 @@ $grey: #eaeaea;
 $light-grey: #ebebebeb;
 $border-grey: #d9d9d9d9;
 $green: #68b738;
-$dark-green: #5EAA2F;
+$dark-green: #5eaa2f;
 
 // Viewports
 
