--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,6 +1,5 @@
 .contacts {
   @media (min-width:$desktop-width) {
-    position: relative;
     display: flex;
     align-items: center;
     height: 500px;
@@ -54,7 +53,7 @@
   margin: 0;
 
   @media (min-width:$tablet-width) {
-    line-height: 1.25;
+    line-height: 21px;
     font-size: 20px;
   }
 
@@ -66,7 +65,7 @@
 .contacts__address {
   font-family: "Arial", sans-serif;
   font-size: 14px;
-  line-height: 1.5;
+  line-height: 20px;
 
   @media (min-width: $tablet-width) {
     text-align: right;
@@ -94,16 +93,16 @@
   background-color: $light-grey;
   background-image: url("../img/map-mobile.png");
   background-repeat: no-repeat, no-repeat;
-  background-position: center 51%, center;
+  background-position: center;
   background-size: cover;
 
   @media (min-width:$tablet-width) {
     height: 395px;
     background-image: url("../img/map-tablet.png");
-    background-size: 124px, cover;
+    background-size: cover;
   }
 
-  @media (min-width:$tablet-width) {
+  @media (min-width:$desktop-width) {
     height: 500px;
     background-image: url("../img/map-desktop.png");
     background-position: center;
