--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -2,13 +2,27 @@
   background-image: url("../img/index-background-mobile1.jpg");
   background-repeat: no-repeat;
   background-position: top;
-  background-size: 320px 302px;
+  background-size: 100%;
   min-height: 480px;
+
+  @media (min-width: $tablet-width) {
+    background-color: $white;
+    background-image: none;
+  }
 }
 
 .intro__wrapper {
   text-align: center;
   color: $white;
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0 20px;
+    text-align: left;
+    color: $black;
+  }
 }
 
 .intro__title {
@@ -19,6 +33,11 @@
   margin: 0 auto 25px;
   padding-top: 25px;
   text-transform: none;
+
+  @media (min-width: $tablet-width) {
+    padding: 35px 0;
+    font-size: 60px;
+  }
 }
 
 .intro__lead {
@@ -27,4 +46,10 @@
   color: $white;
   padding-bottom: 26px;
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 22px;
+    padding-bottom: 15px;
+  }
 }
