--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -13,16 +13,32 @@
   line-height: 40px;
   font-weight: 400;
   color: $black;
+
+  @media (min-width: $tablet-width) {
+    padding: 35px 0;
+    font-size: 60px;
+  }
 }
 
 .features__list {
-  @include reset-list;
+  @include reset-list ();
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+  }
 }
 
 .features__item {
   display: flex;
   align-items: center;
   margin: 20px 0;
+
+  @media (min-width: $tablet-width) {
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
 
 .feature__text {
@@ -32,4 +48,10 @@
   font-size: 14px;
   font-weight: 400;
   color: $special-dark-grey;
+
+  @media (min-width: $tablet-width) {
+    width: 250px;
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
