--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -15,9 +15,14 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
-  width: 280px;
   align-items: center;
   box-sizing: border-box;
+
+  @media (min-width: $tablet-width) {
+    flex-direction: column;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
 }
 
 .page-header__logo {
@@ -31,5 +36,22 @@
 
   &:active {
     opacity: 0.6;
+  }
+}
+
+.page-header__logo-img {
+  width: 33px;
+  height: 38px;
+
+  @media (min-width: $tablet-width) {
+    width: 173px;
+    height: 59px;
+  }
+}
+
+.page-header__logo-title {
+
+  @media (min-width: $tablet-width) {
+    display: none;
   }
 }
