--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -1,25 +1,31 @@
-.programs {
-  width: 280px;
-  margin: 0 auto;
-}
-
 .programs__wrapper {
   display: flex;
   box-sizing: border-box;
   margin: 20px auto;
-  background-color: $basic-grey;
 }
 
 .programs__list {
-  @include reset-list;
+  @include reset-list ();
   background-color: $white;
 }
 
 .programs__item {
   margin-bottom: 20px;
   padding: 20px 20px 0;
-  background-color: $grey;
-  overflow: hidden;
+  background-color: $basic-grey;
+
+  &:last-child {
+    margin-bottom: 9px;
+  }
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 30px;
+
+
+    &--pro {
+      padding-right: 315px;
+    }
+  }
 }
 
 .program__title {
@@ -31,6 +37,12 @@
   line-height: 50px;
   font-weight: normal;
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    padding: 22px 0;
+    font-size: 36px;
+    line-height: 30px;
+  }
 }
 
 .program__text {
@@ -41,6 +53,15 @@
   margin: 0;
   padding: 20px 0;
   border-bottom: 1px solid $border-grey;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 5px;
+    padding-bottom: 35px;
+    font-size: 16px;
+    line-height: 24px;
+    color: $black;
+    border-bottom: none;
+  }
 }
 
 .program__link {
@@ -95,5 +116,15 @@
 
   &:active::after {
     border-left-color: $green;
+  }
+
+  @media (min-width: $tablet-width) {
+    display: inline-flex;
+    font-size: 20px;
+    border: 0;
+
+    &::before {
+      margin-left: 25px;
+    }
   }
 }
