--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -63,6 +63,13 @@
   @media (min-width:$desktop-width) {
     &--fat-cat {
       width: 750px;
+      left: -40px;
+      padding-right: 40px;
+      overflow: visible;
+    }
+
+    &--after {
+      box-shadow: 400px 590px 0 400px $grey;
     }
   }
 
@@ -109,7 +116,7 @@
 
 .slider__button {
   margin: 0 20px;
-  line-height: 1.25;
+  line-height: 20px;
   text-align: center;
   text-transform: uppercase;
   color: $black;
@@ -117,7 +124,7 @@
   @media (min-width:$tablet-width) {
     padding: 6px 0;
     font-size: 20px;
-    line-height: 1;
+    line-height: 30px;
     border-bottom: 1px dotted $black;
 
     &:hover {
@@ -125,7 +132,7 @@
     }
 
     &:active {
-      border-bottom: 0;
+      border-bottom: none;
     }
   }
 }
@@ -137,14 +144,13 @@
   height: 14px;
   border-radius: 6px;
   background-color: $white;
-  border: 1px solid $border-grey;
+  border: 1px solid $special-grey;
   box-sizing: border-box;
 
   @media (min-width:$tablet-width) {
     width: 428px;
     height: 6px;
-    background-color: $border-grey;
-    border-color: $border-grey;
+    background-color: $special-grey;
   }
 }
 
@@ -158,8 +164,10 @@
   cursor: pointer;
 
   @media (min-width:$tablet-width) {
+    margin-left: calc(50% - 17px);
     width: 34px;
     height: 34px;
+    background-image: radial-gradient($green 0, $green 4px, $white 5px, $white 100%);
     border: 1px solid $border-grey;
     border-radius: 50%;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
