--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -15,9 +15,19 @@
   justify-content: center;
   text-align: center;
 
-  @include reset-list;
+  @include reset-list ();
 }
 
 .social__item {
   width: 54px;
+
+  @media (min-width: $tablet-width) {
+    margin: 0 15px;
+    width: 25px;
+
+    &:nth-child(2) {
+      margin: 0 18px;
+      width: 19px;
+    }
+  }
 }
