--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -5,7 +5,8 @@ $basic-grey: #f2f2f2f2;
 $special-dark-grey: #444444;
 $grey: #eaeaea;
 $light-grey: #ebebebeb;
-$border-grey: #d9d9d9d9;
+$special-grey: #cdcdcd;
+$border-grey: #d9d9d9;
 $green: #68b738;
 $dark-green: #5eaa2f;
 
