--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -19,9 +19,13 @@
   }
 
   @media (min-width:$tablet-width) {
+    position: absolute;
+    top: 140px;
+    left: 6px;
+    font-size: 20px;
     display: flex;
-    flex-direction: row;
     align-items: center;
+    justify-content: center;
     width: 244px;
     height: 54px;
   }
