--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -55,6 +55,7 @@
   @media (min-width:$tablet-width) {
     line-height: 21px;
     font-size: 20px;
+    width: 171px;
   }
 
   @media (min-width:$desktop-width) {
@@ -70,6 +71,7 @@
   @media (min-width: $tablet-width) {
     text-align: right;
     font-size: 16px;
+    width: 159px;
   }
 
   @media (min-width: $desktop-width) {
