--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -1,3 +1,15 @@
+.copyright {
+  box-sizing: content-box;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 5px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 0;
+  }
+}
+
 .copyright__link {
   display: flex;
   justify-content: space-between;
@@ -20,4 +32,5 @@
   width: 27px;
   height: 34px;
   margin-left: auto;
+  color: $special-grey2;
 }
