--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -3,7 +3,14 @@
 }
 
 .features__wrapper {
-  box-sizing: border-box;
+
+  @media (min-width: $tablet-width) {
+    max-width: 768px;
+  }
+
+  @media (min-width: $desktop-width) {
+    max-width: 1300px;
+  }
 }
 
 .features__title {
