--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -12,6 +12,12 @@
   @media (min-width: $tablet-width) {
     display: flex;
     flex-wrap: wrap;
+  }
+
+  @media (min-width: $desktop-width) {
+    flex-basis: 570px;
+    justify-content: flex-end;
+  }
 }
 
 .main-nav__item {
@@ -40,17 +46,24 @@
   }
 
   @media (min-width:$tablet-width) {
+    margin: 0 18px;
+    padding: 10px 0;
     font-size: 18px;
     line-height: 24px;
-  }
 
-  &--current {
-    border-bottom: 2px solid $green;
+    &--current {
+      border-bottom: 2px solid $green;
+    }
   }
 
   @media (min-width:$desktop-width) {
     font-size: 20px;
-    line-height: 1.24;
+    line-height: 30px;
+    color: $white;
+
+    &--current {
+      border-bottom-color: $white;
+    }
   }
 
   @media (min-width:$desktop-width) {
@@ -64,4 +77,4 @@
   }
 }
 }
-}
+
