--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,5 +1,5 @@
 .page-footer {
-  background-color: $grey;
+  background-color: $basic-grey;
 }
 
 .page-footer__bottom {
@@ -12,12 +12,21 @@
     padding-bottom: 47px;
     min-height: 150px;
   }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 54px;
+    min-height: 144px;
+  }
 }
 
 .page-footer__logo,
 .page-footer__social,
 .page-footer__copyright {
   padding: 20px 0;
+
+  @media (min-width: $tablet-width) {
+    padding: 0;
+  }
 }
 
 .page-footer__logo {
