--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,4 +1,5 @@
 .page-header {
+  position: relative;
   min-height: 65px;
   margin: 0 auto;
   padding: 0;
@@ -6,6 +7,27 @@
   justify-content: center;
   background-color: $white;
   text-transform: uppercase;
+
+  @media (min-width: $desktop-width) {
+    &--background {
+      z-index: 0;
+    }
+
+    &::before {
+      position: absolute;
+      z-index: -1;
+      content: "";
+      top: 0;
+      right: 0;
+      bottom: -540px;
+      left: calc(50% + 40px);
+      background-color: $green;
+      background-image: url("../img/index-background-desktop1.jpg");
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: right center;
+    }
+  }
 }
 
 .page-header__wrapper {
@@ -15,6 +37,18 @@
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 52px;
+  }
 }
 
 .page-header--index {
@@ -49,6 +83,11 @@
   @media (min-width: $tablet-width) {
     width: 173px;
     height: 59px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 202px;
+    height: 60px;
   }
 }
 
