--- a/source/sass/blocks/toggle.scss
+++ b/source/sass/blocks/toggle.scss
@@ -19,4 +19,8 @@
   @media (min-width: $tablet-width) {
     display: none;
   }
+
+  @media (min-width: $desktop-width) {
+    display: none;
+  }
 }
