--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -3,6 +3,7 @@ $black: #000000;
 $white: #ffffff;
 $basic-grey: #f2f2f2f2;
 $special-dark-grey: #444444;
+$special-grey2: #666666;
 $grey: #eaeaea;
 $light-grey: #ebebebeb;
 $special-grey: #cdcdcd;
@@ -13,7 +14,7 @@ $dark-green: #5eaa2f;
 // Viewports
 
 $tablet-width: 768px;
-$desktop-width: 1300px;
+$desktop-width: 1440px;
 $mobile-width-only: 767px;
 
 // Fonts
