--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,9 +1,7 @@
 .contacts {
   @media (min-width: $desktop-width) {
     position: relative;
-    display: flex;
     align-items: center;
-    height: 500px;
     width: 570px;
   }
 }
@@ -41,21 +39,14 @@
   }
 
   @media (min-width:$desktop-width) {
-    margin-bottom: 10px;
-    padding-left: 75px;
-    padding-right: 85px;
     z-index: 1;
+    position: absolute;
+    left: 7.64%;
+    right: 52.78%;
+    top: 23.75%;
+    bottom: 26%;
     background-color: $white;
-    max-width: 570px;
-  }
-}
-
-.contacts__part {
-  margin: 0;
-  flex-basis: 50%;
-
-  @media (min-width: $tablet-width) {
-    flex-basis: 160px;
+    width: 570px;
   }
 }
 
@@ -72,10 +63,6 @@
     line-height: 21px;
     font-size: 20px;
     width: 171px;
-  }
-
-  @media (min-width:$desktop-width) {
-    margin-right: 90px;
   }
 }
 
@@ -107,7 +94,6 @@
 
 .contacts__map {
   width: 100%;
-  height: 362px;
   background-color: $light-grey;
   background-image: url("../img/map-mobile.png");
   background-repeat: no-repeat, no-repeat;
@@ -115,14 +101,10 @@
   background-size: cover;
 
   @media (min-width:$tablet-width) {
-    height: 395px;
     background-image: url("../img/map-tablet.png");
-    background-size: cover;
   }
 
   @media (min-width:$desktop-width) {
-    height: 500px;
     background-image: url("../img/map-desktop.png");
-    background-position: center;
   }
 }
