--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,17 +1,18 @@
 .contacts {
   @media (min-width: $desktop-width) {
     position: relative;
+    display: flex;
     align-items: center;
-    width: 570px;
   }
 }
 
 .contacts__text {
+
   @media (min-width: $desktop-width) {
     position: absolute;
     top: 0;
     bottom: 0;
-    padding-left: 110px;
+    padding-left: calc((100vw - 1300px) / 2 + 40px);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -21,6 +22,7 @@
 
 .contacts__text-wrapper {
   display: flex;
+  padding: 26px 20px 25px;
   line-height: 20px;
   z-index: 1;
   align-items: center;
@@ -36,17 +38,6 @@
     &--white {
       background-color: $white;
     }
-  }
-
-  @media (min-width:$desktop-width) {
-    z-index: 1;
-    position: absolute;
-    left: 7.64%;
-    right: 52.78%;
-    top: 23.75%;
-    bottom: 26%;
-    background-color: $white;
-    width: 570px;
   }
 }
 
@@ -79,7 +70,6 @@
 
   @media (min-width: $desktop-width) {
     text-align: left;
-    line-height: 1.4;
   }
 }
 
@@ -105,6 +95,8 @@
   }
 
   @media (min-width:$desktop-width) {
+    width: 1440px;
+    height: 400px;
     background-image: url("../img/map-desktop.png");
   }
 }
