--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -1,17 +1,13 @@
-.programs__wrapper {
-  display: flex;
-  box-sizing: border-box;
-  margin: 20px auto;
-
-  @media (min-width: $tablet-width) {
-    width: 708px;
-    min-height: 372px;
-    display: flex;
-    flex-direction: column;
-    margin: 0 auto 30px;
-  }
+.programs {
 
   @media (min-width: $desktop-width) {
+    padding-top: 40px;
+  }
+}
+.programs__wrapper {
+
+  @media (min-width: $desktop-width) {
+    padding: 0;
     display: flex;
     flex-wrap: wrap;
   }
@@ -21,6 +17,7 @@
   @include reset-list ();
   background-color: $white;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .programs__item {
@@ -44,14 +41,14 @@
   margin: 0;
   padding: 0;
   font-size: 24px;
-  line-height: 50px;
+  line-height: 37px;
   font-weight: normal;
   text-transform: uppercase;
 
   @media (min-width: $tablet-width) {
     padding: 22px 0;
     font-size: 36px;
-    line-height: 1;
+    line-height: 36px;
   }
 }
 
