--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -1,10 +1,62 @@
-.product__wrapper {
-  max-width: 480px;
+.product__card {
+  display: grid;
   margin: 0 auto;
+  width: 280px;
+  grid-template-columns: 1fr 1fr;
+  min-height: 209px;
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    width: 248px;
+    flex-direction: column;
+    margin-top: -14px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-top: -22px;
+  }
+}
+
+.product__img {
+  align-self: center;
+  justify-self: center;
+  padding-top: 15px;
+
+  @media (min-width: $tablet-width) {
+    min-height: 143px;
+  }
+}
+
+.product__link-img {
+  display: flex;
+  flex: 1 0 auto;
+
+  @media (min-width: $tablet-width) {
+    width: 100%;
+    padding-bottom: 33px;
+    align-items: flex-end;
+  }
+}
+
+.product__button {
+  margin: 0 auto;
+  min-width: 280px;
+  max-width: 480px;
+  flex: 1 0 100%;
+  z-index: 2;
+
+  @media (min-width: $tablet-width) {
+    min-width: 248px;
+    flex: auto;
+  }
+
+  @media (min-width: $desktop-width) {
+    min-width: 169px;
+  }
 }
 
 .product__link {
-  color: #222222;
+  text-decoration: none;
 
   &:hover {
     color: $green;
@@ -18,14 +70,23 @@
 
 .product__title {
   width: 100%;
-  max-width: 102px;
   padding-bottom: 10px;
   margin: 0;
   font-size: 16px;
   line-height: 20px;
   font-weight: 300;
+  text-align: center;
   text-transform: uppercase;
-  color: #222222;
+
+  @media (min-width: $tablet-width) {
+    margin: 0 auto;
+    text-align: center;
+    font-size: 20px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 80%;
+  }
 }
 
 .product__info {
@@ -42,13 +103,55 @@
     text-align: right;
   }
 
-  & tr {
-    border-bottom: 1px solid $border-grey;
+  // & tr {
+  //   border-bottom: 1px solid $border-grey;
+  // }
+
+  @media (min-width: $tablet-width) {
+    margin-top: 10px;
+    margin-bottom: 33px;
+
+    & tr {
+      border-bottom: 1px solid $border-grey;
+    }
+
+    & td {
+      padding: 8px 0;
+      font-size: 16px;
+      line-height: 16px;
+    }
   }
 }
 
-.product__button {
-  margin: 0 auto;
-  min-width: 280px;
-  max-width: 480px;
+.product__text {
+  margin: 0;
+  font-size: 12px;
+  line-height: 16px;
+  padding-bottom: 21px;
+  color: $special-dark-grey;
+  text-align: center;
+}
+
+.more-products {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.more-products__icon {
+  position: relative;
+  padding-top: 78px;
+  padding-bottom: 8px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    top: -40px;
+    left: 50%;
+    margin-left: 125px;
+    background-image: url("../img/plus-catalog-more.svg");
+  }
 }
