--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -1,16 +1,46 @@
 .promo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 15px 0 30px;
   background-image: url("../img/gift-photo-mobile1.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  max-width: 634px;
   margin: 0 auto;
+
+  @media (min-width: $tablet-width) {
+    max-width: 708px;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-bottom: 25px;
+    background-image: url("../img/gift-photo-tablet1.png");
+  }
+
+  @media (min-width: $desktop-width) {
+    flex-direction: column;
+    justify-content: flex-start;
+    background-image: url("../img/gift-photo-desktop1.png");
+  }
 }
 
 .promo__text {
+  flex-grow: 1;
   margin: 15px 0;
   text-align: center;
   font-family: $arial;
   line-height: 18px;
-  color: #ffffff;
+  color: $white;
+
+  @media (min-width: $tablet-width) {
+    flex-grow: 0;
+    margin-top: 25px;
+    width: 285px;
+    text-align: left;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-top: 15px;
+    text-align: center;
+  }
 }
